# computationbook-rust

./: Cargo.toml  README.md
just_add_power/: dpda.rs  dpdadesign.rs  dpdarulebook.rs  helper.rs  main.rs  npdadesign.rs  pdaconfiguration.rs  pdarule.rs
programming_in_toyland/signs/: main.rs  numeric.rs  sign.rs
programming_in_toyland/types/: context.rs  environment.rs  main.rs  syntax.rs  syntaxtype.rs
programming_with_nothing/fizzbuzz/: helper.rs  main.rs  pol.rs  solution.rs
programming_with_nothing/lambda_calculus/: lambda.rs  main.rs
src/: helper.rs  lib.rs
src/just_add_power/: dpda.rs  dpdadesign.rs  dpdarulebook.rs  main.rs  mod.rs  npda.rs  npdadesign.rs  npdarulebook.rs  pdaconfiguration.rs  pdarule.rs
src/programming_in_toyland/: mod.rs
src/programming_with_nothing/: fizzbuzz.rs  lambda-parser.rs  lambda.pest  mod.rs
src/the_meaning_of_programs/: simple-parser.rs  simple.pest
src/the_simplest_computers/: mod.rs  regex-parser.rs  regex.pest
src/the_ultimate_machine/: dtm.rs  dtm_rulebook.rs  main.rs  mod.rs  tm_configuration.rs  tm_rule.rs
src/universality_is_everywhere/: mod.rs
the_meaning_of_programs/: denotational.rs  machine.rs  main.rs  reduce.rs  syntax.rs
the_meaning_of_programs/big_step/: main.rs  syntax.rs
the_meaning_of_programs/denotational/: main.rs  syntax.rs
the_meaning_of_programs/simple/: mod.rs  (+5 more)
the_simplest_computers/: dfa.rs  main.rs  main2.rs  nfadesign.rs  nfamain.rs  regex.rs  regexmain.rs  toNFA.rs  tonfa.rs
the_ultimate_machine/: dtm.rs  dtm_rulebook.rs  main.rs  tape.rs  tm_configuration.rs  tm_rule.rs
(+108 files in other folders)
