[package]
name = "computationbook_rust"
version = "0.1.0"
authors = ["yodalee <lc85301@gmail.com>"]

[lib]
name = "computationbook"
path = "src/lib.rs"

[[bin]]
name = "fizzbuzz"
path = "src/programming_with_nothing/fizzbuzz.rs"

[[bin]]
name = "chap6_lambda_calculus"
path = "programming_with_nothing/lambda_calculus/main.rs"

[[bin]]
name = "chap7_tag_systesms"
path = "universality_is_everywhere/tag_systems/main.rs"
